syntax = "proto3";

package auth;

option go_package = "github.com/DavidG9999/DMS/api/grpc/auth_api/api/gen;authgrpcv1";

service Auth {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
    string name = 1; // Name of the user register.
    string email = 2; // Email of the user register.
    string password = 3; // Password of the user register.
}

message SignUpResponse {
    int64 user_id = 1; // User ID of the registered user.
}

message SignInRequest {
    string email = 1; // Email of the user to login.
    string password = 2; // Password of the user to login.
}

message SignInResponse {
    string token = 1; // Auth token of the logged in user.
}